--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "test": "node src/test/architecture.test.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "eslint": "^9.37.0",
-    "rolldown": "^1.0.0-beta.43",
-    "@cloudflare/workers-types": "^4.20251011.0",
-    "typescript-eslint": "^8.46.1",
-    "unplugin-swc": "^1.5.7",
-    "wrangler": "^4.43.0",
-    "typescript": "^5.8.3"
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "rolldown": "^1.0.0-beta.9-commit.d91dfb5",
+    "@cloudflare/workers-types": "^4.20251211.0",
+    "typescript-eslint": "^8.49.0",
+    "unplugin-swc": "^1.5.9",
+    "wrangler": "^4.54.0",
+    "typescript": "^5.9.3"
   }
 }
